# pygame

./: .dockerfile  .gitignore  README.md  docker-compose.yaml  requirements.txt  setup.py
apple_catch/apple_catch/: __main__.py  cli.py  game_engine.py  logger.py
apple_catch/apple_catch/entities/: __init__.py  apple.py  apple_manager.py  catcher.py  dimension.py  display_text.py  entity.py  terrain.py  text.py
apple_catch/apple_catch/helpers/: math.py
apple_catch/apple_catch/server/: __main__.py  server.py
apple_catch/apple_catch/synth/: __main__.py  composition.py  instrument.py  music_theory.py  oscillator.py  synth.py
apple_catch/img/: apple.psd  cloud.piskel  ground.piskel
docker/: Dockerfile  compose.yaml  requirements.txt
src/apple_catch/apple_catch/: __main__.py  entrypoint.py  game_engine.py  start_client.py  start_game.py  start_server.py
src/apple_catch/apple_catch/client/: __main__.py
src/apple_catch/apple_catch/entities/: apple.py  catcher.py  ground.py
src/apple_catch/apple_catch/helpers/: __init__.py  entity_group.py
src/apple_catch/apple_catch/server/: __init__.py  address.py  client.py  message.py  server.py  simple_message_protocol.py
src/apple_catch/config/: logger_config.yaml
src/apple_catch/img/: Catcher.psd  background.psd  farmer.piskel  ground.piskel
src/loglad/: pyproject.toml
src/loglad/loglad/: __main__.py  logger_builder.py
synth/: music_theory.py
